# bathy_labeling

./: .gitignore  .gitlab-ci.yml  README.md  environment.yml  pyproject.toml  sampling_env.yaml
docs/specs/: 2026-06-12-atl24-smart-labeler-design.md
docs/superpowers/plans/: 2026-06-12-atl24-smart-labeler-implementation.md  2026-06-15-dem-reference-overlay-implementation.md  2026-06-15-map-sync-layout-implementation.md  (+1 more)
frontend/: index.html  package-lock.json  package.json  tsconfig.test.json  vite.config.ts
frontend/src/: api.ts  basemap.ts  demTrace.ts  labelState.ts  main.ts  mapSync.ts  mapTrack.ts  mapView.ts  plotRows.ts  plotly.d.ts  profileColors.ts  profileControls.ts  profilePlot.ts  profileRevision.ts  profileSelection.ts  reprocessStatus.ts  saveStatus.ts  styles.css  syncState.ts  types.ts  workflowUi.ts
outputs/representative_pool/: representative_aois_seed20260612_n10.geojson  representative_aois_seed20260612_n25.geojson
scripts/: generate_representative_aois.py
src/bathy_labeler/: cli.py
tests/backend/: test_app.py  test_cli.py  test_dem.py  test_features_proposals.py  test_hdf5_store.py  test_imports.py  test_labels.py  test_reprocess.py  test_reprocess_app.py
tests/frontend/: api.test.ts  basemap.test.ts  demTrace.test.ts  labelState.test.ts  mapSync.test.ts  mapTrack.test.ts  profileColors.test.ts  profileControls.test.ts  profilePlot.test.ts  profileRevision.test.ts  profileSelection.test.ts  reprocessStatus.test.ts  saveStatus.test.ts  syncState.test.ts  workflowUi.test.ts
tests/sampling/: test_generate_representative_aois.py
(+12 files in other folders)
