[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "bathy-labeler"
version = "0.1.0"
description = "Local ATL24 photon smart-labeling workflow"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115",
  "h5py>=3.10",
  "numpy>=1.26",
  "pyproj>=3.6",
  "rasterio>=1.4",
  "typer>=0.12",
  "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27",
  "pytest>=8.2",
]

[project.scripts]
bathy-labeler = "bathy_labeler.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
